--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,6 +9,22 @@
 </head>
 <body>
 
+<div class="container-sm" style="width: 960px">
+    <div class="d-flex row col-12 align-items-center border-bottom pt-2">
+        <div class="d-flex col-6 align-items-center p-0 fs-4">
+            <img src="image/logoBootstrapblanc.png" style="width: ">
+            <span>Pricing example</span>
+        </div>
+        <div class="d-flex col-6 justify-content-end p-0">
+            <span> Features Enterprise Support Pricing </span>
+        </div>
+    </div>
+    <div class="d-flex flex-column align-items-center mx-auto p-2" style="width: 75%">
+        <span>Pricing</span>
+        <span>Quickly build an effective pricing table for your potential customers with this Bootstrap example. It’s built with default Bootstrap components and utilities with little customization.</span>
+    </div>
+
+</div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
