--- a/index.html
+++ b/index.html
@@ -10,18 +10,68 @@
 <body>
 
 <div class="container-sm" style="width: 960px">
-    <div class="d-flex row col-12 align-items-center border-bottom pt-2">
+    <div class="d-flex row col-12 align-items-center border-bottom pt-2 mb-3">
         <div class="d-flex col-6 align-items-center p-0 fs-4">
-            <img src="image/logoBootstrapblanc.png" style="width: ">
+            <img src="image/logoBootstrapblanc.png">
             <span>Pricing example</span>
         </div>
         <div class="d-flex col-6 justify-content-end p-0">
             <span> Features Enterprise Support Pricing </span>
         </div>
     </div>
-    <div class="d-flex flex-column align-items-center mx-auto p-2" style="width: 75%">
-        <span>Pricing</span>
-        <span>Quickly build an effective pricing table for your potential customers with this Bootstrap example. It’s built with default Bootstrap components and utilities with little customization.</span>
+    <div class="d-flex flex-column align-items-center mx-auto p-3 mb-3" style="width: 75%">
+        <span class="pricing">Pricing</span>
+        <span class="fs-5 text-center text-secondary-emphasis">Quickly build an effective pricing table for your potential customers with this Bootstrap example. It’s built with default Bootstrap components and utilities with little customization.</span>
+    </div>
+    <div class="row d-flex justify-content-between column-gap-4">
+        <div class="card col p-0 text-center">
+            <div class="card-header fs-2">
+                Free
+            </div>
+            <div class="card-body">
+                <h5 class="card-title fs-1">$0/mo</h5>
+                <p class="card-text d-flex flex-column">
+                    <span>10 users included</span>
+                    <span>2 GB of storage</span>
+                    <span>Email support</span>
+                    <span>Help center access</span>
+                </p>
+                <a href="#" class="btn btn-outline-primary fs-5" style="width: 100%">Sign up for free</a>
+            </div>
+        </div>
+        <div class="card col p-0 text-center">
+            <div class="card-header fs-2">
+                Pro
+            </div>
+            <div class="card-body">
+                <h5 class="card-title fs-1">$15/mo</h5>
+                <p class="card-text d-flex flex-column">
+                    <span>20 users included</span>
+                    <span>10 GB of storage</span>
+                    <span>Priority email support</span>
+                    <span>Help center access</span>
+                </p>
+                <a href="#" class="btn btn-primary fs-5" style="width: 100%">Get started</a>
+            </div>
+        </div>
+        <div class="card col p-0 text-center border-primary">
+            <div class="card-header fs-2 text-bg-primary">
+                Enterprise
+            </div>
+            <div class="card-body">
+                <h5 class="card-title fs-1">$29/mo</h5>
+                <p class="card-text d-flex flex-column">
+                    <span>30 users included</span>
+                    <span>15 GB of storage</span>
+                    <span>Phone and email support</span>
+                    <span>Help center access</span>
+                </p>
+                <a href="#" class="btn btn-primary fs-5" style="width: 100%">Contact us</a>
+            </div>
+        </div>
+    </div>
+    <div class="d-flex fs-1 justify-content-center fw-light mt-4">
+        <span>Compare plans</span>
     </div>
 
 </div>
