add footer - finish

--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 <body>
 
 <div class="container-sm" style="width: 960px">
-    <div class="d-flex row col-12 align-items-center border-bottom pt-2 mb-3">
+    <div class="d-flex row col align-items-center border-bottom pt-2 mb-3">
         <div class="d-flex col-6 align-items-center p-0 fs-4">
             <img src="image/logoBootstrapblanc.png">
             <span>Pricing example</span>
         </div>
         <div class="d-flex col-6 justify-content-end p-0">
-            <span> Features Enterprise Support Pricing </span>
+            <span class="FESP"> Features Enterprise Support Pricing </span>
         </div>
     </div>
     <div class="d-flex flex-column align-items-center mx-auto p-3 mb-3" style="width: 75%">
         <span class="pricing">Pricing</span>
         <span class="fs-5 text-center text-secondary-emphasis">Quickly build an effective pricing table for your potential customers with this Bootstrap example. It’s built with default Bootstrap components and utilities with little customization.</span>
     </div>
-    <div class="row d-flex justify-content-between column-gap-4">
-        <div class="card col p-0 text-center">
+    <div class="row d-flex justify-content-between column-gap-3">
+        <div class="card col text-center">
             <div class="card-header fs-2">
                 Free
             </div>
@@ -173,6 +173,35 @@
         </tr>
         </tbody>
     </table>
+    <div class="row border-top mt-5 pt-5 mb-5">
+        <div class="d-flex flex-column col-3">
+            <img src="image/logoBootstrapcouleur.png" style="width: 30px;height: 30px">
+            <span>&copy 2017-2024</span>
+        </div>
+        <div class="d-flex flex-column col-3">
+            <span class="fw-bold">Features</span>
+            <span class="text-secondary">Cool stuff</span>
+            <span class="text-secondary">Random feature</span>
+            <span class="text-secondary">Team feature</span>
+            <span class="text-secondary">Stuff for developers</span>
+            <span class="text-secondary">Another one</span>
+            <span class="text-secondary">Last time</span>
+        </div>
+        <div class="d-flex flex-column col-3">
+            <span class="fw-bold">Resources</span>
+            <span class="text-secondary">Resource</span>
+            <span class="text-secondary">Resource name</span>
+            <span class="text-secondary">Another resource</span>
+            <span class="text-secondary">Final resource</span>
+        </div>
+        <div class="d-flex flex-column col-3">
+            <span class="fw-bold">About</span>
+            <span class="text-secondary">Team</span>
+            <span class="text-secondary">Locations</span>
+            <span class="text-secondary">Privacy</span>
+            <span class="text-secondary">Terms</span>
+        </div>
+    </div>
 
 </div>
 
